fixed size of body on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,15 @@
 * { box-sizing: border-box;}
 body {
-    width: 1920px;
-    height: 1200px;
+    width: 1024px;
+    height: 600px;
+    max-width: 1024px;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 1920) {
+    body {
+        overflow: hidden;
+    }
 }
 
 @font-face{ 
